--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,5 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 jwt.secret=bugslife
 
-server.error.include-stacktrace=always
+#スタックとレースの表示: 開発環境ではalways 本番環境ではneverに設定
+server.error.include-stacktrace=never
